--- a/login.html
+++ b/login.html
@@ -137,6 +137,7 @@
                 <br>
                 <br>
                 <br>
+                <a href="registration.html">Register Now</a>
             </form>
 
         </div>
