--- a/login.html
+++ b/login.html
@@ -75,10 +75,10 @@
         <div class="nav">
 
             <div class="navbuttons">
-                <a href="index.html"><button class="btnnav">MEN</button></a>
+                <a href="mens.html"><button class="btnnav">MEN</button></a>
             </div>
             <div class="navbuttons">
-                <a href="#"><button class="btnnav">WOMEN</button></a>
+                <a href="womens.html"><button class="btnnav">WOMEN</button></a>
             </div>
             <div class="navbuttons">
                 <a href="#"><button class="btnnav">KIDS</button></a>
