--- a/mens.html
+++ b/mens.html
@@ -68,14 +68,14 @@
     <div class="thirddiv">
         <a href="mens.html">
             <div class="">
-                <img src="images/men.webp" alt="" width="100%" height="100%">
+                <img src="images/Mens.webp" alt="" width="100%" height="100%">
             </div>
         </a>
-        <a href="womens.html">
+        <!-- <a href="index.html">
             <div>
                 <img src="images/women.webp" alt="" width="100%" height="100%">
             </div>
-        </a>
+        </a> -->
     </div>
 
     <div class="fourthdiv">
@@ -83,87 +83,6 @@
 
     </div>
 
-
-    <div class="maincard">
-
-
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
-            </div>
-            <div class="pctext">
-
-                Ethnic Wear
-                <br>
-                <h1>50-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womensactive.webp">
-            </div>
-            <div class="pctext">
-
-                Womens's Activeware
-                <br>
-                <h1>30-70% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womenswestern.webp">
-            </div>
-            <div class="pctext">
-
-                Western Wear
-                <br>
-                <h1>40-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womencasual.webp">
-            </div>
-            <div class="pctext">
-
-                WFH Casual Wear
-                <br>
-                <h1>40-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/makeup.jpg">
-            </div>
-            <div class="pctext">
-
-                Beauty & Makeup
-                <br>
-                <h1>80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-    </div>
 
     <div class="maincard">
 
