--- a/womens.html
+++ b/womens.html
@@ -66,14 +66,14 @@
     </div>
 
     <div class="thirddiv">
-        <a href="mens.html">
+        <!-- <a href="index.html">
             <div class="">
                 <img src="images/men.webp" alt="" width="100%" height="100%">
             </div>
-        </a>
+        </a> -->
         <a href="womens.html">
             <div>
-                <img src="images/women.webp" alt="" width="100%" height="100%">
+                <img src="images/womens.webp" alt="" width="100%" height="100%">
             </div>
         </a>
     </div>
@@ -165,86 +165,6 @@
         </div>
     </div>
 
-    <div class="maincard">
-
-
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/menswear.webp">
-            </div>
-            <div class="pctext">
-
-                T-Shirts
-                <br>
-                <h1>40-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/shirts.webp">
-            </div>
-            <div class="pctext">
-
-                Shirts
-                <br>
-                <h1>50-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/mensjeans.webp">
-            </div>
-            <div class="pctext">
-
-                Jeans
-                <br>
-                <h1>50-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/trousers.webp">
-            </div>
-            <div class="pctext">
-
-               Trousers
-                <br>
-                <h1>50-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/kurtas.webp">
-            </div>
-            <div class="pctext">
-
-               Kurtas
-                <br>
-                <h5>50-80% OFF</h5>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-    </div>
     <div class="secondlast">
         <img src="images/mobile.webp" alt="" width="100%" height="100%">
 
