--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             </div>
 
         </div>
-    </div>
+    <!-- </div>
 
-    <div class="maincard">
+    <div class="maincard"> -->
 
 
         <div class="photocard">
