--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
 
 <body>
     <div class="firstdiv">
-        <div class="logo"><a href="index.html"><img src="images/myntra-1200x900.webp"></a></div>
-        <div class="nav">
 
-            <div class="navbuttons">
-                <a href="mens.html"><button class="btnnav">MEN</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="womens.html"><button class="btnnav">WOMEN</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">KIDS</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">HOME & LIVING</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">BEAUTY</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">STUDIO</button></a>
+        <div class="nav">
+            <a href="index.html"><img src="images/myntra-1200x900.webp" height="100%"></a>
+            <div class="nav2">
+                <div class="navbuttons">
+                    <a href="mens.html"><button class="btnnav">MEN</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="womens.html"><button class="btnnav">WOMEN</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">KIDS</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">HOME & LIVING</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">BEAUTY</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">STUDIO</button></a>
+                </div>
             </div>
         </div>
 
@@ -163,7 +165,7 @@
             </div>
 
         </div>
-    <!-- </div>
+        <!-- </div>
 
     <div class="maincard"> -->
 
@@ -220,7 +222,7 @@
             </div>
             <div class="pctext">
 
-               Trousers
+                Trousers
                 <br>
                 <h1>50-80% OFF</h1>
                 <p>Shop Now</p>
@@ -235,7 +237,7 @@
             </div>
             <div class="pctext">
 
-               Kurtas
+                Kurtas
                 <br>
                 <h1>50-80% OFF</h1>
                 <p>Shop Now</p>
@@ -298,7 +300,8 @@
             </h4>
         </div>
 
-        <div class="footblock"><h3>USEFUL LINKS</h3><br><br>
+        <div class="footblock">
+            <h3>USEFUL LINKS</h3><br><br>
 
 
             <h4>Blog</h4>
@@ -312,7 +315,9 @@
 
     </div>
 
-    <a href="#top"><div class="child" id="child1"><i class="fa-solid fa-2x fa-arrow-up"></i></div></a>
+    <a href="#top">
+        <div class="child" id="child1"><i class="fa-solid fa-2x fa-arrow-up"></i></div>
+    </a>
 
 </body>
 
