--- a/registration.html
+++ b/registration.html
@@ -118,26 +118,28 @@
 
 <body>
     <div class="firstdiv">
-        <div class="logo"><a href="index.html"><img src="images/myntra-1200x900.webp"></a></div>
-        <div class="nav">
 
-            <div class="navbuttons">
-                <a href="mens.html"><button class="btnnav">MEN</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="womens.html"><button class="btnnav">WOMEN</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">KIDS</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">HOME & LIVING</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">BEAUTY</button></a>
-            </div>
-            <div class="navbuttons">
-                <a href="#"><button class="btnnav">STUDIO</button></a>
+        <div class="nav">
+            <a href="index.html"><img src="images/myntra-1200x900.webp" height="100%"></a>
+            <div class="nav2">
+                <div class="navbuttons">
+                    <a href="mens.html"><button class="btnnav">MEN</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="womens.html"><button class="btnnav">WOMEN</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">KIDS</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">HOME & LIVING</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">BEAUTY</button></a>
+                </div>
+                <div class="navbuttons">
+                    <a href="#"><button class="btnnav">STUDIO</button></a>
+                </div>
             </div>
         </div>
 
