--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         </div>
         <!-- search bar right align -->
 
+        <div class="menu">
+            <i class="fa-solid fa-bars"></i>
+
+        </div>
+
         <div class="logo2">
 
             <div class="navbuttons">
