--- a/mens.html
+++ b/mens.html
@@ -46,6 +46,10 @@
             </form>
         </div>
         <!-- search bar right align -->
+        <div class="menu">
+            <i class="fa-solid fa-bars"></i>
+
+        </div>
 
         <div class="logo2">
 
