--- a/registration.html
+++ b/registration.html
@@ -153,6 +153,10 @@
             </form>
         </div>
         <!-- search bar right align -->
+        <div class="menu">
+            <i class="fa-solid fa-bars"></i>
+
+        </div>
 
         <div class="logo2">
 
