content page added

--- a/index.html
+++ b/index.html
@@ -93,23 +93,24 @@
 
     <div class="maincard">
 
+        <a href="content.html" style="text-decoration: none;">
+            <div class="photocard">
+                <div class="pcimg">
+                    <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                </div>
+                <div class="pctext">
 
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                    Ethnic Wear
+                    <br>
+                    <h1>50-80% OFF</h1>
+                    <p>Shop Now</p>
+
+
+                </div>
+
             </div>
-            <div class="pctext">
-
-                Ethnic Wear
-                <br>
-                <h1>50-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-
+        </a>
+        <a href="content.html" style="text-decoration: none;">
         <div class="photocard">
             <div class="pcimg">
                 <img style="height: 100% ;width: 100%;" src="images/womensactive.webp">
@@ -125,6 +126,7 @@
             </div>
 
         </div>
+        </a>
         <div class="photocard">
             <div class="pcimg">
                 <img style="height: 100% ;width: 100%;" src="images/womenswestern.webp">
