--- a/content.html
+++ b/content.html
@@ -140,6 +140,24 @@
 
             </div>
 
+            <div class="leftside2">
+                <div style="float: left;"><B>RANGE</B></div>
+                <div style="float: right;" class="searchicon">
+                </div>
+                <br>               
+                <br>
+               <input type="radio" name="checkbox" id=""><label> 10% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 20% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 30% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 40% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 50% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 60% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 70% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 80% and above</label><br>
+               <input type="radio" name="checkbox" id=""><label> 90% and above</label><br>
+
+            </div>
+
 
         </div>
         <div class="rightside">
@@ -161,6 +179,97 @@
                 </div>
             </div>
             <div class="rightsidephotocard">
+                <a href="finalpage.html" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Kalini</h3>
+                            <!-- <br> -->
+                            <h5>Kurta With Trousers & Dupatta</h5>
+                            <h5><b>RS. 1748</b> <del>RS. 4999</del> <span>(65% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="finalpage.html" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female1.jpg">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>GoSriKi</h3>
+                            <!-- <br> -->
+                            <h5>Women Kurta Set</h5>
+                            <h5><b>RS. 953</b> <del>RS. 4345</del> <span>(Rs. 3392 OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="finalpage.html" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female2.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Sangria</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered A-Line Kurta Sets</h5>
+                            <h5><b>RS. 2260</b> <del>RS. 6649</del> <span>(66% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="finalpage.html" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female3.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>kasee</h3>
+                            <!-- <br> -->
+                            <h5>Beads and Stones Saree</h5>
+                            <h5><b>RS. 2148</b> <del>RS. 7163</del> <span>(70% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="finalpage.html" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female4.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Indo Era</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered Kurta Set</h5>
+                            <h5><b>RS. 1899</b> <del>RS. 7999</del> <span>(80% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <!-- repeat -->
                 <a href="" style="text-decoration: none;">
                     <div class="rphotocard">
                         <div class="rpcimg">
@@ -179,10 +288,282 @@
                     </div>
                 </a>
 
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female1.jpg">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>GoSriKi</h3>
+                            <!-- <br> -->
+                            <h5>Women Kurta Set</h5>
+                            <h5><b>RS. 953</b> <del>RS. 4345</del> <span>(Rs. 3392 OFF)</span></h5>
 
 
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female2.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Sangria</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered A-Line Kurta Sets</h5>
+                            <h5><b>RS. 2260</b> <del>RS. 6649</del> <span>(66% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female3.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>kasee</h3>
+                            <!-- <br> -->
+                            <h5>Beads and Stones Saree</h5>
+                            <h5><b>RS. 2148</b> <del>RS. 7163</del> <span>(70% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female4.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Indo Era</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered Kurta Set</h5>
+                            <h5><b>RS. 1899</b> <del>RS. 7999</del> <span>(80% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <!-- repeat -->
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Kalini</h3>
+                            <!-- <br> -->
+                            <h5>Kurta With Trousers & Dupatta</h5>
+                            <h5><b>RS. 1748</b> <del>RS. 4999</del> <span>(65% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female1.jpg">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>GoSriKi</h3>
+                            <!-- <br> -->
+                            <h5>Women Kurta Set</h5>
+                            <h5><b>RS. 953</b> <del>RS. 4345</del> <span>(Rs. 3392 OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female2.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Sangria</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered A-Line Kurta Sets</h5>
+                            <h5><b>RS. 2260</b> <del>RS. 6649</del> <span>(66% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female3.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>kasee</h3>
+                            <!-- <br> -->
+                            <h5>Beads and Stones Saree</h5>
+                            <h5><b>RS. 2148</b> <del>RS. 7163</del> <span>(70% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female4.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Indo Era</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered Kurta Set</h5>
+                            <h5><b>RS. 1899</b> <del>RS. 7999</del> <span>(80% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <!-- repeat -->
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Kalini</h3>
+                            <!-- <br> -->
+                            <h5>Kurta With Trousers & Dupatta</h5>
+                            <h5><b>RS. 1748</b> <del>RS. 4999</del> <span>(65% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female1.jpg">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>GoSriKi</h3>
+                            <!-- <br> -->
+                            <h5>Women Kurta Set</h5>
+                            <h5><b>RS. 953</b> <del>RS. 4345</del> <span>(Rs. 3392 OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female2.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Sangria</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered A-Line Kurta Sets</h5>
+                            <h5><b>RS. 2260</b> <del>RS. 6649</del> <span>(66% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female3.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>kasee</h3>
+                            <!-- <br> -->
+                            <h5>Beads and Stones Saree</h5>
+                            <h5><b>RS. 2148</b> <del>RS. 7163</del> <span>(70% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="" style="text-decoration: none;">
+                    <div class="rphotocard">
+                        <div class="rpcimg">
+                            <img style="height: 100% ;width: 100%;" src="images/female4.webp">
+                        </div>
+                        <div class="rpctext">
+
+                            <h3>Indo Era</h3>
+                            <!-- <br> -->
+                            <h5>Embroidered Kurta Set</h5>
+                            <h5><b>RS. 1899</b> <del>RS. 7999</del> <span>(80% OFF)</span></h5>
+
+
+                        </div>
+
+                    </div>
+                </a>
+
+                <!-- repeat -->
 
             </div>
+
+
+            <!--photocardend  -->
+
+            <div class="rightsideend">
+                
+                <hr>
+                <br>
+                <br>
+                <div class="rightsidenavbuttons">
+                    <button><i class="fa-solid fa-chevron-left"></i> Previous</button>
+                    <div>
+                        Page 1 of 7822
+                    </div>
+                    <button>Next <i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
@@ -248,7 +629,9 @@
 
 
     </div>
-
+    <a href="#top">
+        <div class="child" id="child1"><i class="fa-solid fa-2x fa-arrow-up"></i></div>
+    </a>
 </body>
 
 </html>
