--- a/womens.html
+++ b/womens.html
@@ -92,23 +92,24 @@
 
     <div class="maincard">
 
+        <a href="content.html">
+            <div class="photocard">
+                <div class="pcimg">
+                    <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                </div>
+                <div class="pctext">
 
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womendress.webp">
+                    Ethnic Wear
+                    <br>
+                    <h1>50-80% OFF</h1>
+                    <p>Shop Now</p>
+
+
+                </div>
+
             </div>
-            <div class="pctext">
-
-                Ethnic Wear
-                <br>
-                <h1>50-80% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
-
+        </a>
+        <a href="content.html">
         <div class="photocard">
             <div class="pcimg">
                 <img style="height: 100% ;width: 100%;" src="images/womensactive.webp">
@@ -124,6 +125,8 @@
             </div>
 
         </div>
+        </a>
+
         <div class="photocard">
             <div class="pcimg">
                 <img style="height: 100% ;width: 100%;" src="images/womenswestern.webp">
@@ -224,7 +227,8 @@
             </h4>
         </div>
 
-        <div class="footblock"><h3>USEFUL LINKS</h3><br><br>
+        <div class="footblock">
+            <h3>USEFUL LINKS</h3><br><br>
 
 
             <h4>Blog</h4>
@@ -238,7 +242,9 @@
 
     </div>
 
-    <a href="#top"><div class="child" id="child1"><i class="fa-solid fa-2x fa-arrow-up"></i></div></a>
+    <a href="#top">
+        <div class="child" id="child1"><i class="fa-solid fa-2x fa-arrow-up"></i></div>
+    </a>
 
 </body>
 
