fixes of final page

--- a/finalpage.html
+++ b/finalpage.html
@@ -76,19 +76,19 @@
     <div class="final3div">
         <div class="finalphotocard">
             <div class="finalphotocardin">
-                <img style="height: 100% ;width: 100%;" src="images/finalwomen0.jpg">
+                <img style="height: 450px ;width: 100%;" src="images/finalwomen0.jpg">
             </div>
             <div class="finalphotocardin">
-                <img style="height: 100% ;width: 100%;" src="images/finalwomen1.jpg">
+                <img style="height: 450px ;width: 100%;" src="images/finalwomen1.jpg">
             </div>
             <div class="finalphotocardin">
-                <img style="height: 100% ;width: 100%;" src="images/finalwomen2.jpg">
+                <img style="height: 450px ;width: 100%;" src="images/finalwomen2.jpg">
             </div>
             <div class="finalphotocardin">
-                <img style="height: 100% ;width: 100%;" src="images/finalwomen3.jpg">
+                <img style="height: 450px ;width: 100%;" src="images/finalwomen3.jpg">
             </div>
             <div class="finalphotocardin">
-                <img style="height: 100% ;width: 100%;" src="images/female4.jpg">
+                <img style="height: 450px ;width: 100%;" src="images/female4.jpg">
             </div>
         </div>
 
@@ -219,6 +219,7 @@
             </div>
 
 
+           
 
         </div>
     </div>
