--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="firstdiv">
 
         <div class="nav">
-            <a href="index.html"><img src="images/myntra-1200x900.webp" height="100%"></a>
+            <div class="logodiv">
+                <a href="index.html"><img src="images/myntra-1200x900.webp" height="100%" width="100%"></a>
+            </div>
             <div class="nav2">
                 <div class="navbuttons">
                     <a href="mens.html"><button class="btnnav">MEN</button></a>
@@ -111,21 +113,21 @@
             </div>
         </a>
         <a href="content.html" style="text-decoration: none;">
-        <div class="photocard">
-            <div class="pcimg">
-                <img style="height: 100% ;width: 100%;" src="images/womensactive.webp">
+            <div class="photocard">
+                <div class="pcimg">
+                    <img style="height: 100% ;width: 100%;" src="images/womensactive.webp">
+                </div>
+                <div class="pctext">
+
+                    Womens's Activeware
+                    <br>
+                    <h1>30-70% OFF</h1>
+                    <p>Shop Now</p>
+
+
+                </div>
+
             </div>
-            <div class="pctext">
-
-                Womens's Activeware
-                <br>
-                <h1>30-70% OFF</h1>
-                <p>Shop Now</p>
-
-
-            </div>
-
-        </div>
         </a>
         <div class="photocard">
             <div class="pcimg">
