--- a/mens.html
+++ b/mens.html
@@ -13,7 +13,9 @@
     <div class="firstdiv">
 
         <div class="nav">
-            <a href="index.html"><img src="images/myntra-1200x900.webp" height="100%"></a>
+            <div class="logodiv">
+                <a href="index.html"><img src="images/myntra-1200x900.webp" height="100%" width="100%"></a>
+            </div>
             <div class="nav2">
                 <div class="navbuttons">
                     <a href="mens.html"><button class="btnnav">MEN</button></a>
